fix spacing on additional setup

--- a/_sass/landing/landing-additional-setup.scss
+++ b/_sass/landing/landing-additional-setup.scss
@@ -1,6 +1,5 @@
 .section-additional {
   flex-wrap: wrap;
-  padding: $md 0;
 
   @include media(md) {
     flex-direction: column;
